--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    <p>hello random</p>
-    <p>random</p>
+    <h1>String</h1>
 </body>
 </html>
