--- a/class project/javascript/project6/index.html
+++ b/class project/javascript/project6/index.html
@@ -34,7 +34,7 @@
         </section>
         <div>
             <button class="btn restart">Restart 🔁</button>
-            <!-- <div class="ruler_container">
+            <div class="ruler_container">
                 <div class="flex_center">10</div>
                 <div class="flex_center">9</div>
                 <div class="flex_center">8</div>
@@ -45,7 +45,7 @@
                 <div class="flex_center">3</div>
                 <div class="flex_center">2</div>
                 <div class="flex_center">1</div>
-            </div> -->
+            </div>
             <div class="shooter_container"></div>
             <div class="laser"></div>
         </div>
