--- a/class project/javascript/project6/index.html
+++ b/class project/javascript/project6/index.html
@@ -14,16 +14,16 @@
 
 <body>
     <main class="main_container">
-        <section class="container">
+        <section class="container container_styling">
             <div class="overall_score_container overall_score_container_styling">
                 <h2 class="player">Gamer 1</h2>
                 <span class="player_score">0</span>
             </div>
-            <div>
+            <div class="cursor_score">
 
             </div>
         </section>
-        <section class="container">
+        <section class="container container_styling">
             <div class="overall_score_container overall_score_container_styling">
                 <h2 class="player">Gamer 2</h2>
                 <span class="player_score">0</span>
@@ -32,21 +32,21 @@
 
             </div>
         </section>
-        <div>
+        <div class="actions_container">
             <button class="btn restart">Restart 🔁</button>
             <div class="ruler_container">
-                <div class="flex_center">10</div>
-                <div class="flex_center">9</div>
-                <div class="flex_center">8</div>
-                <div class="flex_center">7</div>
-                <div class="flex_center">6</div>
-                <div class="flex_center">5</div>
-                <div class="flex_center">4</div>
-                <div class="flex_center">3</div>
-                <div class="flex_center">2</div>
-                <div class="flex_center">1</div>
+                <div class="flex_center | pop | pop_styling">10</div>
+                <div class="flex_center | pop | pop_styling">9</div>
+                <div class="flex_center | pop | pop_styling">8</div>
+                <div class="flex_center | pop | pop_styling">7</div>
+                <div class="flex_center | pop | pop_styling">6</div>
+                <div class="flex_center | pop | pop_styling">5</div>
+                <div class="flex_center | pop | pop_styling">4</div>
+                <div class="flex_center | pop | pop_styling">3</div>
+                <div class="flex_center | pop | pop_styling">2</div>
+                <div class="flex_center | pop | pop_styling">1</div>
             </div>
-            <div class="shooter_container"></div>
+            <div class="shooter_container shooter_container_styling"></div>
             <div class="laser"></div>
         </div>
     </main>
