--- a/class project/javascript/project6/index.html
+++ b/class project/javascript/project6/index.html
@@ -17,10 +17,11 @@
         <section class="container container_styling">
             <div class="overall_score_container overall_score_container_styling">
                 <h2 class="player">Gamer 1</h2>
-                <span class="player_score">0</span>
+                <span class="player_score" id="overall_score--1">0</span>
             </div>
-            <div class="cursor_score">
-
+            <div class="current_score_container">
+                <span class="curr_score" id="current_score--1">10</span>
+                <img>
             </div>
         </section>
         <section class="container container_styling">
@@ -28,12 +29,13 @@
                 <h2 class="player">Gamer 2</h2>
                 <span class="player_score">0</span>
             </div>
-            <div>
-
+            <div class="current_score_container">
+                <span class="curr_score" id="current_score--2">10</span>
+                <img>
             </div>
         </section>
         <div class="actions_container">
-            <button class="btn restart">Restart 🔁</button>
+            <button class="btn restart_btn">Restart 🔁</button>
             <div class="ruler_container">
                 <div class="flex_center | pop | pop_styling">10</div>
                 <div class="flex_center | pop | pop_styling">9</div>
