--- a/class project/javascript/project7/index.html
+++ b/class project/javascript/project7/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stocks Account</title>
+    <link rel="stylesheet" href="util.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    <h2>To continue investing with your DEMAT account, login..</h2>
+    <div class="container">
+        <h2>To continue investing with your DEMAT account, login..</h2>
+        <button type="button">name code</button>
+        <button type="button">password</button>
+    </div>
 </body>
 </html>
