--- a/class project/javascript/project7/index.html
+++ b/class project/javascript/project7/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stocks Account</title>
-    <link rel="stylesheet" href="util.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/util.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./script.js" defer></script>
 </head>
+
 <body>
-    <div class="container">
-        <h2>To continue investing with your DEMAT account, login..</h2>
-        <button type="button">name code</button>
-        <button type="button">password</button>
+    <div class="main_container">
+        <div class="container">
+            <h2 class="font">To continue investing with your DEMAT account, login..</h2>
+        </div>
+        <div class="btn_container">
+            <button class="btn_1">name code</button>
+            <button class="btn_2">password</button>
+        </div>
     </div>
+
 </body>
+
 </html>
