--- a/class project/javascript/project7/index.html
+++ b/class project/javascript/project7/index.html
@@ -19,6 +19,7 @@
         <div class="btn_container">
             <button class="btn_1">name code</button>
             <button class="btn_2">password</button>
+            <span class="login_site"> &#8594 </span>
         </div>
     </div>
 
