--- a/class work/javascrpit/april 13/index.html
+++ b/class work/javascrpit/april 13/index.html
@@ -8,6 +8,7 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
-    
+    <h1>HOF(Functional Program)</h1>
+    <h1>Closure</h1>
 </body>
 </html>
