--- a/class project/javascript/project7/index.html
+++ b/class project/javascript/project7/index.html
@@ -16,10 +16,12 @@
         <div class="container">
             <h2 class="font">To continue investing with your DEMAT account, login..</h2>
         </div>
-        <div class="btn_container">
-            <button class="btn_1">name code</button>
-            <button class="btn_2">password</button>
-            <span class="login_site"> &#8594 </span>
+        <div>
+            <form class="btn_container">
+                <input type="text" placeholder="name code" class="btn_1">
+                <input type="text" placeholder="password" class="btn_2">
+                <span class="login_site"> <a href="http://127.0.0.1:5501/class%20project/javascript/project7/index2.html">&#8594</a></span>
+            </form>
         </div>
     </div>
 
