--- a/class project/javascript/project6/index.html
+++ b/class project/javascript/project6/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/util.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./script.js" defer></script>
-    <title>Class version - Greed shot</title>
+    <title>Greed shot</title>
 </head>
 
 <body>
